Improve accessibility and fix layout issues

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ h3 {
 }
 
 .card-content {
-    padding: 5% 8% 5% 5%;
+    padding: 5% 6% 5% 5%;
     display: flex;
     flex-direction: column;
 }
@@ -81,7 +81,7 @@ h3 {
 
 .card-footer {
     display: flex;
-    padding: 15px;
+    padding: 15px 0px 15px 15px;
     position: relative;
 }
 
@@ -170,6 +170,10 @@ h3 {
         padding: 20px 20px 0px 20px;
     }
 
+    .card-footer {
+        padding: 15px 15px 15px 15px;
+    }
+
     .card-footer.active {
         position: relative;
         z-index: 2;
@@ -188,6 +192,7 @@ h3 {
         top: -15px;
         right: 15px;
         background-color: var(--Desaturated-Dark-Blue);
+        height: 40px;
     }
 
     .active svg path {
